--- a/djangoerp/themes/default/templates/index.html
+++ b/djangoerp/themes/default/templates/index.html
@@ -3,5 +3,12 @@
 {% load i18n %}
 
 {% block title %}
-<h1>{% trans 'Welcome to django ERP!' %}</h1>
+<h1>{{ user_dashboard.title }}</h1>
+<ul class="actions">
+    <li class="add"><a title="{% trans 'Add plugget' %}" href="{% url 'plugget_add' user_dashboard.slug %}">{% trans 'Add' %}</a></li>
+</ul>
+{% endblock %}
+
+{% block main %}
+{% include "pluggets/dashboard.html" with dashboard=user_dashboard %}
 {% endblock %}
