Improved "authtools" app adding row/object-level permission backend and all related stuff (decorators, templatetags, context variables, etc.). Added signal handler to automatically grant view/change/delete perms to the author (current user) of a model instance. Added row/object-level permission management to "pluggets" app views and templates.

--- a/djangoerp/pluggets/templates/pluggets/base_plugget.html
+++ b/djangoerp/pluggets/templates/pluggets/base_plugget.html
@@ -1,11 +1,18 @@
 {% load i18n %}
+{% load permfuncs %}
 
 <aside class="plugget{% if plugget_index and not plugget_index|divisibleby:"2" %} altplugget{% endif %} {{ plugget.slug }}" id="{{ plugget.slug }}-plugget">
     <header>
         <h1>{% if plugget.title %}{% trans plugget.title %}{% else %}{% trans plugget.template.title %}{% endif %}</h1>
         <ul class="actions">
+        {% if plugget.region|user_has_perm:"pluggets.change_region" %}
+            {% if plugget|user_has_perm:"pluggets.change_plugget" %}
             <li class="edit"><a title="{% trans 'Edit' %}"  href="{{ plugget.get_edit_url }}">{% trans "Edit" %}</a></li>
+            {% endif %}
+            {% if plugget|user_has_perm:"pluggets.delete_plugget" %}
             <li class="delete"><a title="{% trans 'Delete' %}"  href="{{ plugget.get_delete_url }}">{% trans "Delete" %}</a></li>
+            {% endif %}
+        {% endif %}
         </ul>
     </header>
     {% block plugget-body %}
