--- a/djangoerp/themes/default/templates/base_confirm_delete.html
+++ b/djangoerp/themes/default/templates/base_confirm_delete.html
@@ -19,7 +19,7 @@
         {% block message %}
         {% blocktrans with object|model_name as model %}
         <h3>Are you sure you want to <strong>delete</strong> this {{ model }}?</h3>
-        <p>Please, keep it mind this operation is <strong>irreversible</strong>...</p>
+        <p>Please, keep in mind this operation is <strong>irreversible</strong>...</p>
         {% endblocktrans %}
         {% endblock %}
         {% block buttons %}
