Changed URLs layout of "menus" app (bookmarks). Added tests to "menus" app.

--- a/djangoerp/themes/default/templates/menus/bookmark_form.html
+++ b/djangoerp/themes/default/templates/menus/bookmark_form.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
-    {% add_crumb user.username user.get_absolute_url %}
+    {% add_crumb 'My Bookmarks' 'bookmark_list' %}
     {% if object and object.pk %}
     {% add_crumb  object object.get_absolute_url %}
     {% add_crumb 'Edit' %}
