--- a/djangoerp/themes/default/templates/elements/user_bookmarks.html
+++ b/djangoerp/themes/default/templates/elements/user_bookmarks.html
@@ -3,7 +3,7 @@
 
 {% if user.is_authenticated %}
 <ul class="actions">
-    <li class="add"><a title="{% trans 'Bookmark this page' %}" href="{% url 'bookmark_add' user.username %}">[+]</a></li>
+    <li class="add"><a title="{% trans 'Bookmark this page' %}" href="{% url 'bookmark_add' %}">[+]</a></li>
 </ul>
 {% render_user_bookmarks %}
 {% endif %}
