Added fixed base meta title prefix.

--- a/djangoerp/themes/default/templates/base.html
+++ b/djangoerp/themes/default/templates/base.html
@@ -9,7 +9,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block meta_title %}{% trans "django ERP" %}{% endblock %}</title>
+    <title>{% trans "django ERP" %} |{% block meta_title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/tripoli.simple.css" type="text/css" media="all"/>
     <!--[if IE]><link rel="stylesheet" href="{{ STATIC_URL }}css/tripoli.simple.ie.css" type="text/css" media="all"/><![endif]-->
     <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" type="text/css" media="screen"/>
