Improved form checkbox input style.

--- a/djangoerp/themes/default/static/css/screen.css
+++ b/djangoerp/themes/default/static/css/screen.css
@@ -118,7 +118,9 @@ form textarea {
 }
 
 form input[type="checkbox"] {
+    position: relative;
     width: auto;
+    bottom: -2px;
     margin-right: 10px;
 }
 
