--- a/djangoerp/themes/default/static/css/screen.css
+++ b/djangoerp/themes/default/static/css/screen.css
@@ -227,6 +227,23 @@ thead td, th {
     border-bottom: 1px solid #fff;
     padding: 5px 10px;
 }
+thead td a.asc, th a.asc, thead td a.desc, th a.desc {
+    float: right;
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    background-repeat: no-repeat;
+    background-image: url(images/arrows.png);
+    font-size: 0;
+}
+
+thead td a.asc, th a.asc { background-position: -20px -10px; }
+
+thead td a.asc:hover, th a.asc:hover { background-position: -30px -10px; }
+
+thead td a.desc, th a.desc { background-position: -20px 0; }
+
+thead td a.desc:hover, th a.desc:hover { background-position: -30px 0; }
 
 thead tr.filterbox td, .filterbox th {
     color: #1f1f1f;
