Renamed "menu" templatetag to "render_menu" and cleaned up its implementation.

--- a/djangoerp/menus/templates/menus/menu.html
+++ b/djangoerp/menus/templates/menus/menu.html
@@ -13,7 +13,7 @@
         </a>
         {% endwith %}
         {% if link.submenu %}
-        {% menu link.submenu.slug %}
+        {% render_menu link.submenu.slug %}
         {% endif %}
     </li>
     {% endblock %}
